--- a/popup.html
+++ b/popup.html
@@ -24,7 +24,7 @@
 <body>
     <h1>SIGAAlém</h1>
     <button type="button" id="updateButton">Atualizar</button>
-    <h2 id="functionType">Tipo de Funções: </h2>
+    <h2 id="functionType">Como posso te ajudar hoje? </h2>
     <h3 id="unitClasSchedule">★ Horarios de Aula</h3>
     <div id="unitClasSchedule"></div>
     <h3>★ Contatos Professores</h3>
