--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,17 @@
 <head>
     <title>SIGAAlém</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <script src="scripts/jquery-3.6.1.min.js"></script>
     <style>
         h3 {
-            background-color: rgb(100, 237, 237);
+            background-color: #204d6b;
             padding: 5px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 45px;
+            margin-top: 1px;
             margin-bottom: 0px;
+
         }
 
         div {
